# cs2ghostgam

./: .gitignore  README.md  UNUSED_COMPONENTS_ANALYSIS.md  check_hltv_matches.py  docker-compose.live-tracker.yml  docker-compose.monitoring.yml  docker-compose.odds.yml  docker-compose.scraper.yml  docker-compose.yml  example_usage.py  main.py  odds_manager.py  package-lock.json  package.json  prometheus.odds.yml  requirements.txt  start_system.bat  start_system.sh  test_system.py
.github/workflows/: ci.yml
api/: odds_api.py
app/: __init__.py  config.py  database.py  models.py
app/scrapers/: __init__.py  enhanced_hltv_scraper.py  hltv_scraper.py  odds_scraper.py  robust_odds_scraper.py  session_manager.py  vlr_scraper.py
app/utils/: logger.py
apps/: live_betting_terminal.py  real_odds_terminal.py
config/: scraper_config.yaml
configs/features/: cs2.yaml
core/: __init__.py  advanced_betting_analyzer.py  automated_betting_pipeline.py  deep_betting_analyzer.py  enhanced_team_analyzer.py  integrated_pipeline.py  live_odds_fetcher.py  match_reporter.py  odds_scraper.py  performance_optimizer.py  prediction_tracker.py  production_signal_generator.py  real_odds_api.py  real_odds_scraper.py  signal_generator.py  signal_pipeline.py  universal_match_analyzer.py  upcoming_matches_predictor.py
core/data_collection/: robust_scraper.py
core/ml/: feature_engineer.py  model_io.py  training_pipeline.py
core/pubsub/: __init__.py  publisher.py
core/session/: session_manager.py
core/utils/: timing.py
cs2_betting_system/: .env.production  Dockerfile  Makefile  dashboard.py  docker-compose.yml  integration.py  main.py  requirements.txt
data/: blast_lisbon_2025-08-28.json  deep_blast_analysis_20250827_194922.json  deep_blast_analysis_20250827_200033.json  deep_blast_analysis_20250827_200547.json  deep_blast_analysis_20250827_200955.json  deep_blast_analysis_20250827_204204.json  prediction_history.json  prediction_tracker.db  targeted_blast_analysis_20250827_194433.json  test_blast_results.json  vp_gl_deep_analysis_20250827_202203.json  vp_gl_deep_analysis_20250827_203134.json  vp_gl_deep_analysis_20250827_204217.json
infra/helm/: Chart.yaml  (+1 more)
integration/: __init__.py  signal_risk_integration.py
ml_pipeline/: __init__.py  complete_example.py  data_builder.py  model_trainer.py  model_validator.py  simple_demo.py
models/: __init__.py  cs2_simple_model.pkl  odds_history.py  signal.py
monitoring/: alert_system.py  prometheus_metrics.py
publishers/: redis_publisher.py
reports/: daily_breakdown_20250827_160137.json  daily_report_20250827.json  match_reports.json  ml_report_20250827_052436.json  system_test_20250827_085548.json  system_test_20250827_085854.json
risk_management/: __init__.py  cooldown_manager.py  kelly_calculator.py  monitoring.py  position_manager.py  risk_system.py
scripts/: analysis_integration.py  backtest.py  blast_lisbon_tomorrow.py  blast_london_analysis.py  bypass_hltv_check.py  collect_historical.py  complete_analysis_summary.py  daily_report_generator.py  deep_blast_analysis.py  e2e_smoke_test.py  enhanced_predictions_thai.py  fast_hltv_check.py  gamerlegion_vs_virtuspro_analysis.py  match_predictor_cli.py  match_reporter.py  monitor_hltv.py  prepare_models.py  run_full_betting_system.py  show_predictions.py  show_predictions_thai.py  targeted_blast_analysis.py  test_blast_lisbon.py  test_complete_system.py  test_system.py  triple_match_analysis.py  universal_match_analysis.py  update_ancient_result.py  vp_gl_deep_analysis.py
secrets/: .env.example
services/api-gateway/: pyproject.toml
services/api-gateway/alembic/: env.py
services/api-gateway/alembic/versions/: 001_init.py
services/api-gateway/app/: api_endpoints.py  config.py  data_validator.py  db_writer.py  health_monitor.py  hltv_socketio_client.py  main.py  message_parser.py  redis_publisher.py
services/api-gateway/app/graphql/: subscriptions.py
services/feature-builder/: Dockerfile  pyproject.toml
services/feature-builder/feature_builder/: config.py  database.py  feature_calculators.py  feature_pipeline.py  main.py  models.py  pipeline.py  redis_client.py
services/feedback-logger/: Dockerfile  pyproject.toml
services/feedback-logger/feedback_logger/: main.py
services/ingest-hltv/: Dockerfile  pyproject.toml  realtime_scraper.py
services/ingest-hltv/ingest_hltv/: main.py
services/ingest-hltv/tests/: test_parse_match.py
services/ingest-odds/: Dockerfile  live_odds.py  pyproject.toml
services/ingest-odds/ingest_odds/: live_odds.py  main.py
services/portfolio-sim/: Dockerfile  kelly.py  pyproject.toml  value_detector.py
services/portfolio-sim/portfolio_sim/: main.py
services/prediction/: Dockerfile  pyproject.toml
services/prediction/prediction/: ensemble.py  main.py
services/prediction/prediction/models/: live_predictor.py
shared/: redis_schema.py
tests/: test_scraper.py
utils/: kelly.py
(+120 files in other folders)
