[project]
name = "feature-builder"
version = "0.1.0"
description = ""
authors = [
    {name = "faztyG",email = "verselabproject@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "redis (>=6.4.0,<7.0.0)",
    "nats-py (>=2.11.0,<3.0.0)",
    "orjson (>=3.11.2,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)"
]

[tool.poetry]
packages = [{include = "feature_builder", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
