[project]
name = "ingest-odds"
version = "0.1.0"
description = ""
authors = [
    {name = "faztyG",email = "verselabproject@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp (>=3.12.15,<4.0.0)"
]

[tool.poetry]
packages = [{include = "ingest_odds", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
