[project]
name = "prediction"
version = "0.1.0"
description = ""
authors = [
    {name = "faztyG",email = "verselabproject@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.2,<3.0)"
]

[tool.poetry]
packages = [{include = "prediction", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
